# my-first-repo

./: README.md  package.json  pyproject.toml
__MACOSX/app/retrieval/: ._retriever.py
app/api/: main.py
app/api/routes/: chat.py  health.py  ingest.py
app/chatbot/: __init__.py  chain.py  prompts.py
app/core/: config.py  schemas.py
app/ingestion/: __init__.py  chunking.py  embed.py  index.py  loaders.py  metadata.py  pipeline.py  preprocess.py
app/retrieval/: __init__.py  citations.py  retriever.py
app/ui/: __init__.py  streamlit_app.py
app/validation/: __init__.py  answer_eval.py  datasets.py  reports.py  retrieval_eval.py
data/eval/: pearl_stay_guest_guide.yaml
scripts/: chat_cli.py  ingest.py  validate.py
src/: index.js
tests/unit/: test_preprocess.py  test_retrieval_eval.py
