[project]
name = "policy-rag-assistant"
version = "0.1.0"
description = "End-to-end policy document RAG assistant using LangChain, Vertex AI Gemini, and local Chroma."
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
  "chromadb>=0.5.0",
  "fastapi>=0.115.0",
  "langchain>=0.3.0",
  "langchain-chroma>=0.1.4",
  "langchain-community>=0.3.0",
  "langchain-google-vertexai>=2.0.0",
  "langchain-text-splitters>=0.3.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "pypdf>=5.0.0",
  "python-dotenv>=1.0.1",
  "pyyaml>=6.0.2",
  "rich>=13.8.0",
  "typer>=0.12.5",
  "uvicorn[standard]>=0.30.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.6.0"
]
ui = [
  "streamlit>=1.38.0"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["data*", "scripts*", "tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
